fixed z-index of sidebar button

--- a/front-end/src/style/Sidebar.module.css
+++ b/front-end/src/style/Sidebar.module.css
@@ -5,6 +5,7 @@
     cursor: pointer;
     width:50px;
     height:50px;
+    z-index: 5;
 
 }
 
